# bininfo

./: Cargo.toml  README.md
Media/: README.md
src/: binary.rs  format.rs  magic.rs  main.rs
src/formats/: bmp.rs  elf.rs  mod.rs  png.rs
src/formats/bmp/: mod.rs
src/formats/elf/: constants_relocation.rs  mod.rs
src/formats/gif/: mod.rs
src/formats/javaclass/: class_constants.rs  mod.rs
src/formats/jpg/: mod.rs
src/formats/lua/: lua51.rs  lua52.rs  lua53.rs  mod.rs
src/formats/macho/: macho_constants.rs  mod.rs
src/formats/pdf/: mod.rs
src/formats/pe/: mod.rs  pe_constants.rs
src/formats/png/: mod.rs
src/formats/xp3/: mod.rs
src/formats/zip/: mod.rs
