[package]
name = "bininfo"
version = "0.1.0"
authors = ["forlos"]
edition = "2018"

[dependencies]
ansi_term      = "0.11"
clap           = "2.32.0"
failure        = "0.1"
prettytable-rs = "0.8"
scroll         = "0.9"
scroll_derive  = "0.9"
textwrap       = { version = "0.11", features = ["term_size"] }