[package]
name = "bininfo"
version = "0.2.0"
authors = ["Forlos <forlos@disroot.org>"]
edition = "2018"
publish = false

[dependencies]
ansi_term      = "0.11"
failure        = "0.1"
prettytable-rs = "0.8"
scroll         = "0.9"
scroll_derive  = "0.9"
structopt      = "0.2"
textwrap       = { version = "0.11", features = ["term_size"] }